--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -1456,7 +1456,7 @@ OHI global region ID and name.
 
 *Subcategory: climate change*
 
-This pressure layer models the difference in global distribution of the aragonite saturation state ($\Omega_{arag}$) of the ocean in the pre-industrial era and modern times. Global estimates through time [@eucopernicusmarineserviceinformation2024] are modeled at 1-degree resolution. Changes in the saturation state can be attributed to changes in the concentration of CO~2~ and thus we use the difference between the pre-industrial and modern times as a proxy for ocean acidification due to human influences [@barker2012; @usepa2024]. Values are rescaled from 0 to 1 using the threshold at which seawater becomes undersaturated, where $\Omega_{arag} = 1$, and by relating the current aragonite saturation to a historical reference.
+This pressure layer models the difference in global distribution of the aragonite saturation state ($\Omega_{arag}$) of the ocean in the pre-industrial era and modern times. Global estimates through time [@CMSpaper2024] are modeled at 1-degree resolution. Changes in the saturation state can be attributed to changes in the concentration of CO~2~ and thus we use the difference between the pre-industrial and modern times as a proxy for ocean acidification due to human influences [@barker2012; @usepa2024]. Values are rescaled from 0 to 1 using the threshold at which seawater becomes undersaturated, where $\Omega_{arag} = 1$, and by relating the current aragonite saturation to a historical reference.
 
 #### Units {-} 
  scaled 0-1
