--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,7 @@
 
 @report{monterey_2025,
 	title = {Monterey Bay Aquarium Seafood Watch},
+	author = {{Monterey Bay Aquarium}},
 	url = {https://www.seafoodwatch.org/seafood-recommendations/standards-revision},
 	institution = {Monterey Bay Aquarium},
 	urldate = {2025-06-27},
@@ -29,11 +30,11 @@
 	title = {{RAM} Legacy Stock Assessment Database v4.66},
 	rights = {Creative Commons Attribution 4.0 International, Open Access},
 	url = {ramlegacy.org},
-	abstract = {{RAM} Legacy Stock Assessment Database v4.65},
+	abstract = {{RAM} Legacy Stock Assessment Database v4.66},
 	author = {{RAM Legacy Stock Assessment Database}},
 	urldate = {2025-06-26},
 	date = {2025},
-	doi = {10.5281/zenodo.2542919},
+	doi = {10.5281/zenodo.14043030},
 }
 
 @misc{un_fao_2025,
@@ -102,8 +103,9 @@
 	date = {2025-07-01},
 }
 
-@online{noauthor_travel_2024,
+@online{wttc_2024,
 	title = {Travel \& Tourism Economic Impact Research ({EIR})},
+	author = {{World Travel and Tourism Council}},
 	url = {https://wttc.org/research/economic-impact},
 	abstract = {Explore the economic impact of travel \& tourism with {WTTC}'s comprehensive research and data-driven insights, revealing key trends and future forecasts.},
 	urldate = {2025-08-29},
@@ -119,8 +121,9 @@
 	date = {2025},
 }
 
-@online{noauthor_international_2025,
+@online{imf_2025,
 	title = {International Monetary Fund World Economic Output},
+	author = {{International Monetary Fund}},
 	url = {https://data.imf.org/en/Data-Explorer?datasetUrn=IMF.RES:WEO(6.0.0)},
 	titleaddon = {Gross Domestic Product ({GDP}), current prices, {US} Dollar},
 	urldate = {2025-08-29},
