--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -556,7 +556,7 @@ data_layers(goal="FIS", dimension=c("resilience"))
 
 ### Mariculture (subgoal of food provision)
 
-The mariculture subgoal attempts to measure each region's food production from mariculture relative to its capacity [@united_nations_fao_2025] and sustainability [@monterey_2025]. A basic problem facing previous assessments of mariculture was the lack of an ecologically- and socially-based reference point for the potential yield of every suitable mariculture species for every type of geographic habitat and location. Determining such reference points for every country at the global scale is difficult, not only because of key missing data and information, but also because species, genotypes and habitats suitable for production in any given location are likely to change from year to year. However, recent research [@gentry2019exploring] estimated the global biological potential for marine aquaculture at a high resolution spatial scale, addressing one of these key gaps: ecological reference points. To account for the social and economic realities and constraints to these ecological potentials, we constrained the per-country potential to 1% of this tonnage estimate and used these country values as reference points. Furthermore, the paper does not exclude high biodiversity or environmentally sensitive areas, meaning 100% of potential aquaculture tonnage estimate is a large overestimation of what is actually possible. Additionally, we include a sustainability score for each species in each region which is based on the [Monterey Bay Aquarium Seafood Watch aquaculture recommendations](https://www.seafoodwatch.org/seafood-recommendations/standards-revision) [@monterey_2025].
+The mariculture subgoal attempts to measure each region's food production from mariculture relative to its capacity [@united_nations_fao_2025] and sustainability [@monterey_bay_aquarium_monterey_2025]. A basic problem facing previous assessments of mariculture was the lack of an ecologically- and socially-based reference point for the potential yield of every suitable mariculture species for every type of geographic habitat and location. Determining such reference points for every country at the global scale is difficult, not only because of key missing data and information, but also because species, genotypes and habitats suitable for production in any given location are likely to change from year to year. However, recent research [@gentry2019exploring] estimated the global biological potential for marine aquaculture at a high resolution spatial scale, addressing one of these key gaps: ecological reference points. To account for the social and economic realities and constraints to these ecological potentials, we constrained the per-country potential to 1% of this tonnage estimate and used these country values as reference points. Furthermore, the paper does not exclude high biodiversity or environmentally sensitive areas, meaning 100% of potential aquaculture tonnage estimate is a large overestimation of what is actually possible. Additionally, we include a sustainability score for each species in each region which is based on the [Monterey Bay Aquarium Seafood Watch aquaculture recommendations](https://www.seafoodwatch.org/seafood-recommendations/standards-revision) [@monterey_bay_aquarium_monterey_2025].
 
 #### Current status
 
@@ -602,7 +602,7 @@ where, $Y_{k}$ is the 4-year moving window average of tonnes of production [@uni
 
 All regions scoring above 1.0 are given a score of 1.0. A score of one could occur when the current aquaculture harvest is greater than 1% of the biological production potential (taken from [@gentry2019exploring]) and mariculture harvest is perfectly sustainable within a region. However, when a region has a current harvested yield that is less than 100 tonnes, and when 1% of potential mariculture harfvest is less than 100 tonnes, a score of NA is assigned. This assumption is made to avoid giving a perfect score to regions that have essentially zero harvested yield, and essentially zero biological production potential.
 
-The sustainability score, $S_{k,r}$, for each species in each region is based on the [Monterey Bay Aquarium Seafood Watch aquaculture recommendations](https://www.seafoodwatch.org/seafood-recommendations/standards-revision) [@monterey_2025]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1. These scores are country and species-specific, however, many country/species combinations are not assessed by Seafood Watch. Given that each mariculture record must have a corresponding sustainability score, we used a series of steps to estimate sustainability scores for every country and species. If a country/species match was available we used that, otherwise, we gapfilled using the following sequence:
+The sustainability score, $S_{k,r}$, for each species in each region is based on the [Monterey Bay Aquarium Seafood Watch aquaculture recommendations](https://www.seafoodwatch.org/seafood-recommendations/standards-revision) [@monterey_bay_aquarium_monterey_2025]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1. These scores are country and species-specific, however, many country/species combinations are not assessed by Seafood Watch. Given that each mariculture record must have a corresponding sustainability score, we used a series of steps to estimate sustainability scores for every country and species. If a country/species match was available we used that, otherwise, we gapfilled using the following sequence:
 
 1.  Used the global species value provided by Seafood Watch.
 2.  Within a country, used the average of species within the same family.
@@ -736,6 +736,8 @@ Due to discontinued and non-updated source datasets, we have not updated the sta
 
 This subgoal measures the jobs produced from marine-related industries. Livelihoods includes two equally important sub-components, the number of jobs, which is a proxy for livelihood quantity, and the per capita average annual wages, which is a proxy for job quality.
 
+Tourism quantity and revenue data come from the World Travel and Tourism Center [@world_travel_and_tourism_center_travel_2024]. Tourism quality data comes from the International Labor Organization [@international_labour_organization_average_2025] Average monthly earnings of employees by sex and economic activity looking at the categories of accommodation and food service activities and arts, entertainment and recreation. 
+
 #### Current status
 
 The status of the livelihoods sub-goal, $x_{liv}$, is calculated as:
@@ -798,7 +800,7 @@ As such, we focus on three natural product categories: ornamental fish, fish oil
 
 #### Current status
 
-To determine the total production in tonnes for seaweed we summed seaweed production provided in the FAO global aquaculture production data [@united_nations_fao_2025]. To determine total production in tonnes of ornamental fish we summed the products provided in the FAO commodities data [@un_fao_2025]. Finally, to determine the total production in tonnes for fish oil and fish meal, we used Sea Around Us Project (2020) global marine fisheries catch data [@pauly2020] and B/Bmsy data [@ricard2012examining; @costello_status_2016; @martell2016simple; @thorson_new_2016; @rosenberg2014developing; @costello2016global] calculated from our fisheries sub-goal (methods can be found in section 6.6.1), and subsetted the stocks for stocks used for fish oil production (Table 6.12) [@froehlich2020avoiding]. The tonnes of harvest of fish oil and fish meal species were multiplied by 0.9 to reflect the amount of the fish actually going to production of feed or oil, while the other 10% of fish is used in other ways, such as direct human consumption [@froehlich2020avoiding].
+To determine the total production in tonnes for seaweed we summed seaweed production provided in the FAO global aquaculture production data [@united_nations_fao_2025]. To determine total production in tonnes of ornamental fish we summed the products provided in the FAO commodities data [@un-fao_fao_2025]. Finally, to determine the total production in tonnes for fish oil and fish meal, we used Sea Around Us Project (2020) global marine fisheries catch data [@pauly2020] and B/Bmsy data [@ricard2012examining; @costello_status_2016; @martell2016simple; @thorson_new_2016; @rosenberg2014developing; @costello2016global] calculated from our fisheries sub-goal (methods can be found in section 6.6.1), and subsetted the stocks for stocks used for fish oil production (Table 6.12) [@froehlich2020avoiding]. The tonnes of harvest of fish oil and fish meal species were multiplied by 0.9 to reflect the amount of the fish actually going to production of feed or oil, while the other 10% of fish is used in other ways, such as direct human consumption [@froehlich2020avoiding].
 
 **Table 6.12. Natural product categories**. List of species and FAO products included in each of the three natural product categories.
 
@@ -837,7 +839,7 @@ The exposure term, $E_c$, is the ln-transformed intensity of harvest for ornamen
 
 The risk term, $R_c$, is based on whether ornamental fishing has unsustainable harvest practices. In specific, we used the intensity of cyanide and dynamite fishing as a proxy. Risk for ornamental fish was set based on assessments of cyanide or dynamite fishing by Reefs at Risk Revisited (www.wri.org/publication/reefs-at-risk-revisited) under the assumption that most ornamental fishes are harvested from coral reefs.
 
-For seaweed commodity sustainability, we used the mariculture sustainability scores represented in the Monterey Bay Aquarium Seafood Watch aquaculture recommendations [@monterey_2025]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1. The sustainability score for seaweeds in the Seafood Watch recommendations was a global score, 0.79, which was applied to the seaweed harvest. Seaweed is widely regarded as a very sustainable aquaculture harvest, however, it does poorly on 3 of the 10 criteria that Seafood Watch uses, bringing its average down to 0.79. In specific, it scores poorly on the data quality (having robust and up-to-date information on production practices and their impacts available for analysis), escapes (preventing population-level impacts to wild species or other ecosystem-level impacts from farm escapes), and habitat (maintaining the functionality of ecological valuable habitat) criteria.
+For seaweed commodity sustainability, we used the mariculture sustainability scores represented in the Monterey Bay Aquarium Seafood Watch aquaculture recommendations [@monterey_bay_aquarium_monterey_2025]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1. The sustainability score for seaweeds in the Seafood Watch recommendations was a global score, 0.79, which was applied to the seaweed harvest. Seaweed is widely regarded as a very sustainable aquaculture harvest, however, it does poorly on 3 of the 10 criteria that Seafood Watch uses, bringing its average down to 0.79. In specific, it scores poorly on the data quality (having robust and up-to-date information on production practices and their impacts available for analysis), escapes (preventing population-level impacts to wild species or other ecosystem-level impacts from farm escapes), and habitat (maintaining the functionality of ecological valuable habitat) criteria.
 
 The fish oil commodity sustainability was estimated using the B/Bmsy values which were calculated in our fisheries sub-goal (section 6.6.1).
 
@@ -1016,7 +1018,7 @@ where $A$ is the proportion of coastal arrivals to the coastal area of each OHI 
 
 #### Coastal Arrivals Proportion (A)
 
-Ideally there would be data describing arrivals specific to coastal regions, $A$; however, the best data available at a global scale reports total international arrivals, which does not solely reflect coastal tourism (general data source, probably not a reference) [@unwto2024]. Therefore, we estimate coastal tourism based on the proportion of each region’s coastal population, defined as the number of people within 25 km of the ocean, relative to its total population. We then estimate the density of coastal tourism by dividing by coastal area (km^2^, 1 kilometer inland, and 3 nautical miles out into the eez). 
+Ideally there would be data describing arrivals specific to coastal regions, $A$; however, the best data available at a global scale reports total international arrivals, which does not solely reflect coastal tourism (general data source, probably not a reference) [@unwto_united_2024-1]. Therefore, we estimate coastal tourism based on the proportion of each region’s coastal population, defined as the number of people within 25 km of the ocean, relative to its total population. We then estimate the density of coastal tourism by dividing by coastal area (km^2^, 1 kilometer inland, and 3 nautical miles out into the eez). 
 
 $$Ap = \frac{TourismArrivals * (CoastalPop/TotalPop)}{CoastalArea}$$
 
