--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,7 @@
 	note = {Publication Title: Protected Planet},
 }
 
-@report{monterey_2025,
+@report{monterey_bay_aquarium_monterey_2025,
 	title = {Monterey Bay Aquarium Seafood Watch},
 	author = {{Monterey Bay Aquarium}},
 	url = {https://www.seafoodwatch.org/seafood-recommendations/standards-revision},
@@ -37,7 +37,7 @@
 	doi = {10.5281/zenodo.14043030},
 }
 
-@misc{un_fao_2025,
+@misc{un-fao_fao_2025,
 	title = {{FAO} Fisheries \& Aquaculture - Fishery Statistical Collections - Fishery Commodities and Trade},
 	url = {https://www.fao.org/fishery/en/collection/global_commodity_prod},
 	author = {{UN-FAO}},
@@ -75,7 +75,7 @@
 	langid = {english},
 }
 
-@misc{unwto2024-accomodations,
+@misc{unwto_united_2024,
 	title = {United Nations World Tourism Organization ({UNWTO}) 145 Key Tourism Statistics: Domestic Accomodations},
 	url = {https://www.unwto.org/tourism-statistics/key-tourism-statistics},
 	abstract = {Data are collected from countries by {UNWTO} through a series of yearly questionnaires that are in line with the International Recommendations for Tourism Statistics ({IRTS} 2008) standard led by {UNWTO} and approved by the United Nations.},
@@ -85,7 +85,7 @@
 	langid = {english},
 }
 
-@misc{unwto2024,
+@misc{unwto_united_2024-1,
 	title = {United Nations World Tourism Organization ({UNWTO}) 145 Key Tourism Statistics: Inbound Tourism - Total arrivals (International and Domestic)},
 	url = {https://www.unwto.org/tourism-statistics/key-tourism-statistics},
 	abstract = {Data are collected from countries by {UNWTO} through a series of yearly questionnaires that are in line with the International Recommendations for Tourism Statistics ({IRTS} 2008) standard led by {UNWTO} and approved by the United Nations.},
@@ -103,7 +103,7 @@
 	date = {2025-07-01},
 }
 
-@online{wttc_2024,
+@online{world_travel_and_tourism_center_travel_2024,
 	title = {Travel \& Tourism Economic Impact Research ({EIR})},
 	author = {{World Travel and Tourism Council}},
 	url = {https://wttc.org/research/economic-impact},
@@ -121,7 +121,7 @@
 	date = {2025},
 }
 
-@online{imf_2025,
+@online{international_monetary_fund_international_2025,
 	title = {International Monetary Fund World Economic Output},
 	author = {{International Monetary Fund}},
 	url = {https://data.imf.org/en/Data-Explorer?datasetUrn=IMF.RES:WEO(6.0.0)},
